Finally fixed mobile menubar display, and added a body category to smallest responsive media query to specificy width of the page on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -225,7 +225,7 @@ li {
 
 @media (max-width: 1528px) {
   #container {
-    width: auto;
+    width: 100vw;
     height: auto;
   }
 
@@ -242,6 +242,11 @@ li {
   #tableContainer {
     height: auto;
     width: auto;
+  }
+
+  body {
+    width: 100vw;
+    margin: auto;
   }
 
   #mobile-table {
@@ -269,7 +274,7 @@ li {
     position: relative;
     max-width: 100%;
     text-decoration: none;
-    margin: -60px 0 0 0;
+    margin: -60px 0 8px 0;
     color: black;
     font-size: 12px;
     transition: 0.3s all ease-in-out;
@@ -306,7 +311,7 @@ li {
     display: flex;
     flex-direction: column;
     position: relative;
-    width: auto;
+    width: 100vw;
     height: auto;
     margin: 0px;
     text-decoration: none;
